--- a/Документы/TODO.txt
+++ b/Документы/TODO.txt
@@ -1,6 +1,7 @@
 1 Данные
 2 Подключение данных
 3 Импорт (Остатки, Цеха, Склады, Поставщики, Группы инструментов, Номенклатура, Аналоги)
-4 Дополнительный параметр поиска
+4 Шрифты
 5 Контекстное меню
 6 Диаграмма прецедентов
+7 Сброс поиска
