--- a/Документы/TODO.txt
+++ b/Документы/TODO.txt
@@ -1,6 +1,10 @@
-2 Подключение данных
+Цифры - приоритет
 
-4 Шрифты
-5 Контекстное меню
-6 Диаграмма прецедентов
-7 Сброс поиска
+1 Исправить импорт
+1 Подключение данных
+3 Модифицировать импорт
+2 Шрифты
+2 Контекстное меню
+2 Диаграмма прецедентов
+3 Сброс поиска
+1 "Логика документов"
