--- a/Документы/TODO.txt
+++ b/Документы/TODO.txt
@@ -1,6 +1,5 @@
 Цифры - приоритет
 
-1 Исправить импорт
 1 Подключение данных
 3 Модифицировать импорт
 2 Шрифты
@@ -8,3 +7,4 @@
 2 Диаграмма прецедентов
 3 Сброс поиска
 1 "Логика документов"
+4 Оптимизация DataGridView
