--- a/Документы/TODO.txt
+++ b/Документы/TODO.txt
@@ -8,3 +8,5 @@
 1 "Логика документов"
 4 Оптимизация DataGridView
 2 Отчёты
+1 Исправить подтверждение удаления в формах (FormClosing)
+1 Исправить сохранить и закрыть (очистка формы)
