Добавить задачу в TODO

--- a/Документы/TODO.txt
+++ b/Документы/TODO.txt
@@ -10,3 +10,4 @@
 2 Отчёты
 1 Исправить подтверждение удаления в формах (FormClosing)
 1 Исправить сохранить и закрыть (очистка формы)
+1 Исправить поиск нетекстовых значений
