--- a/Документы/TODO.txt
+++ b/Документы/TODO.txt
@@ -11,3 +11,5 @@
 1 Исправить подтверждение удаления в формах (FormClosing)
 1 Исправить сохранить и закрыть (очистка формы)
 1 Исправить поиск нетекстовых значений
+1 Аналоги таблица ошибка
+
