--- a/Документы/TODO.txt
+++ b/Документы/TODO.txt
@@ -8,8 +8,9 @@
 1 "Логика документов"
 4 Оптимизация DataGridView
 2 Отчёты
+
+Битлз
 1 Исправить подтверждение удаления в формах (FormClosing)
 1 Исправить сохранить и закрыть (очистка формы)
-1 Исправить поиск нетекстовых значений
-1 Аналоги таблица ошибка
+
 
