Исправить nonemclature. Добавить поиск номенклатуры Инжерена.

--- a/Документы/TODO.txt
+++ b/Документы/TODO.txt
@@ -7,10 +7,6 @@
 3 Сброс поиска
 1 "Логика документов"
 4 Оптимизация DataGridView
-2 Отчёты
+2 Отчёты(по остаткам номенклатуры(сформировать отчёт в Excel), отчёты почти по всем документам(печатная версия))
 
 Битлз
-
-
-
-
