Добавить битлз в TODO

--- a/Документы/TODO.txt
+++ b/Документы/TODO.txt
@@ -10,3 +10,5 @@
 2 Отчёты(по остаткам номенклатуры(сформировать отчёт в Excel), отчёты почти по всем документам(печатная версия))
 
 Битлз
+Логгирование в форме Номенклатуры. Обращение к строке.
+Каскадное удаление в изменение формы Номенклатуры
