--- a/Документы/TODO.txt
+++ b/Документы/TODO.txt
@@ -9,6 +9,7 @@
 4 Оптимизация DataGridView
 2 Отчёты(по остаткам номенклатуры(сформировать отчёт в Excel), отчёты почти по всем документам(печатная версия))
 
+2 Поиск в логах
+
 Битлз
-Логгирование в форме Номенклатуры. Обращение к строке.
-Каскадное удаление в изменение формы Номенклатуры
+
