Доработать Номенклатуру Инженера.

--- a/Документы/TODO.txt
+++ b/Документы/TODO.txt
@@ -10,4 +10,5 @@
 2 Отчёты(по остаткам номенклатуры(сформировать отчёт в Excel), отчёты почти по всем документам(печатная версия))
 
 Битлз
-
+1 При удалении группы остаются номера этой группы (исправить позже)
+3 DataError в таблице номенклатуры(отмена попытки добавления)
