--- a/Документы/TODO.txt
+++ b/Документы/TODO.txt
@@ -8,7 +8,9 @@
 1 "Логика документов"
 4 Оптимизация DataGridView
 2 Отчёты(по остаткам номенклатуры(сформировать отчёт в Excel), отчёты почти по всем документам(печатная версия))
+4 Оформление
 
 Битлз
+1 Исправить импорт дат
 1 При удалении группы остаются номера этой группы (исправить позже)
 3 DataError в таблице номенклатуры(отмена попытки добавления)
