Добавить обработку дат и чисел с точкой в Импорт.

--- a/Документы/TODO.txt
+++ b/Документы/TODO.txt
@@ -11,6 +11,6 @@
 4 Оформление
 
 Битлз
-1 Исправить импорт дат
 1 При удалении группы остаются номера этой группы (исправить позже)
+2 Недоделанный поиск в заявках на получение
 3 DataError в таблице номенклатуры(отмена попытки добавления)
