Продолжить разработку вкладок второго уровня.

--- a/Документы/TODO.txt
+++ b/Документы/TODO.txt
@@ -1,5 +1,7 @@
 Цифры - приоритет
 
+0 Создать все формы для руководства пользователя
+0 Закончить документацию
 1 Подключение данных
 3 Модифицировать импорт
 2 Контекстное меню
