--- a/Документы/TODO.txt
+++ b/Документы/TODO.txt
@@ -6,7 +6,7 @@
 3 Модифицировать импорт
 2 Контекстное меню
 2 Диаграмма прецедентов
-3 Сброс поиска
+3 Сброс поиска (у кладовщика)
 1 "Логика документов"
 4 Оптимизация DataGridView
 2 Отчёты(по остаткам номенклатуры(сформировать отчёт в Excel), отчёты почти по всем документам(печатная версия))
