Х Исправить эк часть

--- a/Документы/TODO.txt
+++ b/Документы/TODO.txt
@@ -2,6 +2,11 @@
 
 0 Создать все формы для руководства пользователя
 0 Закончить документацию
+	1 Сделать DPI
+	0 Сделать ТЗ
+	0 Сделать руководство
+	0 Прочее
+	0 Выставить количество листов 
 1 Подключение данных
 3 Модифицировать импорт
 2 Контекстное меню
