--- a/Документы/TODO.txt
+++ b/Документы/TODO.txt
@@ -1,11 +1,7 @@
 Цифры - приоритет
 
-0 Создать все формы для руководства пользователя
 0 Закончить документацию
-	1 Сделать DPI
-	0 Сделать ТЗ
 	0 Сделать руководство
-	0 Прочее
 	0 Выставить количество листов 
 1 Подключение данных
 3 Модифицировать импорт
@@ -21,3 +17,7 @@
 1 При удалении группы остаются номера этой группы (исправить позже)
 2 Недоделанный поиск в заявках на получение
 3 DataError в таблице номенклатуры(отмена попытки добавления)
+
+1 Полное наименование не реагирует на Обозначение
+1 Очепатка подтверждение закрытия формы
+1 Подтвердение закрытия (не работает в Аналогах тоже)
