Написать код для контекстного меню.

--- a/Документы/TODO.txt
+++ b/Документы/TODO.txt
@@ -11,7 +11,7 @@
 4 Оформление
 
 Битлз
-1 При удалении группы остаются номера этой группы (исправить позже)
+1 Заменить combobox на textbox, где используется autocompleting source
 2 Недоделанный поиск в заявках на получение
 3 DataError в таблице номенклатуры(отмена попытки добавления)
 
