Заменить ComboBox в форме аналогов

--- a/Документы/TODO.txt
+++ b/Документы/TODO.txt
@@ -11,7 +11,8 @@
 4 Оформление
 
 Битлз
-1 Заменить combobox на textbox, где используется autocompleting source
+1 Max Min Size форм
+1 Добавление логов при импорте
 2 Недоделанный поиск в заявках на получение
 3 DataError в таблице номенклатуры(отмена попытки добавления)
 
