--- a/Документы/TODO.txt
+++ b/Документы/TODO.txt
@@ -1,17 +1,16 @@
 Цифры - приоритет
 
-1 Подключение данных
+0 Подключение данных
 3 Модифицировать импорт
-2 Контекстное меню
+2 Контекстное меню (у кладовщика)
 2 Диаграмма прецедентов
 3 Сброс поиска (у кладовщика)
-1 "Логика документов"
+0 "Логика документов"
 4 Оптимизация DataGridView
 2 Отчёты(по остаткам номенклатуры(сформировать отчёт в Excel), отчёты почти по всем документам(печатная версия))
 4 Оформление
 
 Битлз
-1 Max Min Size форм
 1 Добавление логов при импорте
 2 Недоделанный поиск в заявках на получение
 3 DataError в таблице номенклатуры(отмена попытки добавления)
