--- a/Документы/TODO.txt
+++ b/Документы/TODO.txt
@@ -1,17 +1,27 @@
 Цифры - приоритет
 
 0 Подключение данных
-3 Модифицировать импорт
-2 Контекстное меню (у кладовщика)
-2 Диаграмма прецедентов
-3 Сброс поиска (у кладовщика)
 0 "Логика документов"
-4 Оптимизация DataGridView
 2 Отчёты(по остаткам номенклатуры(сформировать отчёт в Excel), отчёты почти по всем документам(печатная версия))
+4 Модифицировать импорт
+4 Оптимизация DataGridView
 4 Оформление
 
+Инж
+
+Задачи
+3 Добавление логов при импорте
+
 Битлз
-1 Добавление логов при импорте
-2 Недоделанный поиск в заявках на получение
 3 DataError в таблице номенклатуры(отмена попытки добавления)
+
+Клад
+
+Задачи
+2 Контекстное меню (у кладовщика)
+2 Сброс поиска (у кладовщика)
+
+Битлз
+
+
 
