Реализовать основу заявок на приобретение.

--- a/Документы/TODO.txt
+++ b/Документы/TODO.txt
@@ -11,6 +11,11 @@
 
 Задачи
 3 Добавление логов при импорте
+1 Добавление номенклатуры без номера в рассмотрении заявки
+1 Ограничения при рассмотрении заявок: 
+	если заменен на аналог, то только передача
+	если остаток < требуемое количество, то закупка(но надо учесть замену)
+
 
 Битлз
 3 DataError в таблице номенклатуры(отмена попытки добавления)
